--- a/wallets/TREZOR.asciidoc
+++ b/wallets/TREZOR.asciidoc
@@ -1,7 +1,8 @@
 TREZOR launched in August 2014 as the first Bitcoin hardware wallet, offering secure cold storage with the ability to spend with the convenience of a hot wallet. TREZOR is a small, key-sized device which connects to your computer with a USB cable. It stores your Bitcoin private keys offline and signs transactions for you. It can be safely used on a malware infected computer.
 
 TREZOR is compatible with a number of wallets, including Electrum, Multibit HD, and GreenAddress on desktop, GreenBits on Android, and myTREZOR.com on the web.
-Security
+
+===Security
 
 TREZOR provides top-notch security for your bitcoins–there may not be a better option. The setup protects you from both physical and virtual theft.
 
@@ -17,7 +18,7 @@ TREZOR’s screen allows you to confirm that you’re sending to the intended re
 
 A full overview of how TREZOR handles security threats can be found on the Satoshi Labs website.
 
-Privacy
+===Privacy
 
 TREZOR itself offers very good privacy. The device is shipped with no serial number, so Satoshi Labs has no way of tracking your actions after you receive the device. All of the software is open source, aside from the myTREZOR.com web wallet (other wallets may be used). The device itself is a login, so no usernames or passwords are needed when using TREZOR.
 
