--- a/wallets/TREZOR.asciidoc
+++ b/wallets/TREZOR.asciidoc
@@ -2,7 +2,7 @@ TREZOR launched in August 2014 as the first Bitcoin hardware wallet, offering se
 
 TREZOR is compatible with a number of wallets, including Electrum, Multibit HD, and GreenAddress on desktop, GreenBits on Android, and myTREZOR.com on the web.
 
-===Security
+## Security
 
 TREZOR provides top-notch security for your bitcoins–there may not be a better option. The setup protects you from both physical and virtual theft.
 
@@ -18,7 +18,7 @@ TREZOR’s screen allows you to confirm that you’re sending to the intended re
 
 A full overview of how TREZOR handles security threats can be found on the Satoshi Labs website.
 
-===Privacy
+## Privacy
 
 TREZOR itself offers very good privacy. The device is shipped with no serial number, so Satoshi Labs has no way of tracking your actions after you receive the device. All of the software is open source, aside from the myTREZOR.com web wallet (other wallets may be used). The device itself is a login, so no usernames or passwords are needed when using TREZOR.
 
