--- a/wallets/Circle.asciidoc
+++ b/wallets/Circle.asciidoc
@@ -2,14 +2,14 @@ Circle is a digital money company focused on making money “instant, secure, an
 
 ## Security
 
-Circle is a web/hot wallet, and should not be used to store large amounts of bitcoin. With full control over your account, Circle can freeze your funds at any time.
+Circle is a web/hot wallet, and should not be used to store large amounts of bitcoin. With full control over all accounts and private keys, Circle can freeze funds at any time.
 
-Circle offers insurance on the bitcoin it holds for its customers. However, a loss is only covered if something goes wrong on Circle’s end. If an account is hacked, a user’s bitcoins are gone and Circle cannot help.
+Although Circle insures all of the bitcoin it holds for its customers, a loss is only covered if something goes wrong on Circle’s end. If an account is hacked, a user’s bitcoins are gone and Circle cannot help.
 
 Circle requires its users to setup two-factor authentication.
 
 ## Privacy
 
-Circle requires your name, phone number, email, and a number of other personal details when setting up a wallet. Because Circle has buy/sell features, it must also follow all KYC laws. It can also monitor your IP address.
+Circle requires the user’s name, phone number, email, and a number of other personal details when setting up a wallet. Users must trust Circle’s servers to verify transaction data. Circle knows all users’ addresses and balances at all times. Because Circle has buy/sell features, it must also follow all KYC laws.
 
-Circle is not recommended to users who value their privacy.
+Each payment request uses a new address, which helps prevent other users from connecting Bitcoin addresses together.
