--- a/wallets/Circle.asciidoc
+++ b/wallets/Circle.asciidoc
@@ -1,15 +1,17 @@
 Circle is a digital money company focused on making money “instant, secure, and free”. Its homepage only briefly mentions Bitcoin, and its wallet doesn’t do much more than receiving and spending.
 
+Accounts may be accessed on Circle’s website and iPhone or Android app. Both apps including the buying/selling features and basic sending and receiving of payments.
+
 ## Security
 
-Circle is a web/hot wallet, and should not be used to store large amounts of bitcoin. With full control over all accounts and private keys, Circle can freeze funds at any time.
+As a web/hot wallet, Circle should not be used to store large amounts of bitcoin. With full control over all accounts and private keys, your funds may be frozen at any time.
 
-Although Circle insures all of the bitcoin it holds for its customers, a loss is only covered if something goes wrong on Circle’s end. If an account is hacked, a user’s bitcoins are gone and Circle cannot help.
+Although all bitcoin is insured, a loss is only covered if something goes wrong on Circle’s end. If your account is hacked, the bitcoins are gone.
 
-Circle requires its users to setup two-factor authentication.
+Two-factor authentication is required.
 
 ## Privacy
 
-Circle requires the user’s name, phone number, email, and a number of other personal details when setting up a wallet. Users must trust Circle’s servers to verify transaction data. Circle knows all users’ addresses and balances at all times. Because Circle has buy/sell features, it must also follow all KYC laws.
+Your name, phone number, email, and a number of other personal details are required. You must trust Circle’s servers to verify transaction data. Circle knows your addresses and balances at all times and can connect this with your identity. Because of buy/sell features, it must also follow all KYC laws.
 
 Each payment request uses a new address, which helps prevent other users from connecting Bitcoin addresses together.
