--- a/wallets/Coinbase.asciidoc
+++ b/wallets/Coinbase.asciidoc
@@ -1,19 +1,21 @@
-Coinbase was founded in 2013 and is a US-based Bitcoin company that has received over $100 million in VC funding. Coinbase offers a simple user interface and is a good start for users just learning about Bitcoin.
+Coinbase was founded in 2013 and is a US-based Bitcoin company that has received over $100 million in VC funding. It offers a simple user interface and is a good start for users just learning about Bitcoin.
+
+Accounts may be accessed through Coinbase’s website, or with its iPhone and Android applications.
 
 ## Security
 
 There are three options when creating a new Bitcoin wallet on Coinbase: wallet, vault, and multi-sig vault.
 
-**Wallet:** When using Coinbase’s regular hot wallet, Coinbase controls the private keys. Users must trust that Coinbase will keep the keys secure. Users must also keep their password safe, and also the 2FA code if activated. Coinbase is a VC backed company with over $100 million in funding and likely has a very strong security setup. However, the point of Bitcoin is that users have the ability control their own money. Coinbase can shut down an account and take the balance with it at any time. This is a threat that must be considered when using Coinbase.
+**Wallet:** When using Coinbase’s regular hot wallet, Coinbase controls the private keys. You must trust that Coinbase will keep the keys secure. You must also keep your password safe, and also the 2FA code if activated. Coinbase is a VC backed company with over $100 million in funding and likely has a very strong security setup. However, the point of Bitcoin is that users have the ability control their own money. Coinbase can shut down your account and block access to your funds at anytime.
 
-**Vault:** Coinbase created a unique solution for securing larger amounts of bitcoin. Bitcoins stored in a Vault account can be protected by multiple approvers. If a user adds two approvers to his vault, both must confirm that the withdrawal is valid before it processes. All withdrawals from Vaults take 48-hours to process. The time delay provides a safety net; if a user sees a withdrawal was requested that he/her did not make, the withdrawal may be cancelled. Like the hot wallet, users must trust Coinbase to secure vault funds. Vault accounts can also be shutdown by Coinbase at anytime.
+**Vault:** Coinbase created a unique solution for securing larger amounts of bitcoin. Bitcoins stored in a Vault account can be protected by multiple approvers. If a user adds two approvers to his vault, both must confirm that the withdrawal is valid before it processes. All withdrawals from Vaults take 48-hours to process. The time delay provides a safety net; if you see a withdrawal was requested that you did not make, the withdrawal may be cancelled. Like the hot wallet, you must trust Coinbase to secure vault funds. Vault accounts can also be shutdown by Coinbase at anytime.
 
-**Multisig Vault:** Coinbase understands that many users want complete control over their funds. Its multi-sig vault is a 2 of 3 wallet, where Coinbase has one key, one key is shared, and the third key is held by the account holder. Any two of the three keys allows spending of funds. If Coinbase goes down, the user still has both the shared key and his/her own key. Coinbase cannot hold funds because they need the shared key which is encrypted with the user’s password.
+**Multisig Vault:** Coinbase understands that many users want complete control over their funds. Its multi-sig vault is a 2 of 3 wallet, where Coinbase has one key, one key is shared, and the third key is held by the account holder. Any two of the three keys allows spending of funds. If Coinbase goes down, you still have both the shared key and your own key. Funds cannot be held because the shared key, encrypted with the your password, is needed.
 
 ## Privacy
 
-Coinbase requires the user’s name, phone number, email, and a number of other personal details when setting up a wallet. Users must trust Coinbase’s nodes to verify transaction data. Coinbase knows all users’ addresses and balances at all times.
+Your name, phone number, email, and a number of other personal details are required. Users must trust Coinbase’s nodes to verify transaction data. Coinbase knows all users’ addresses and balances at all times and can connect this with your identity and IP address.
 
-Because Coinbase has buy/sell features, it must also follow all KYC laws. There have been reports that Coinbase tracks how its users spend bitcoin.
+Because Coinbase has buy/sell features, it must also follow all KYC laws. There have been reports that it tracks how its users spend bitcoin.
 
 Each payment request uses a new address, which helps prevent other users from connecting Bitcoin addresses together.
