--- a/wallets/Circle.asciidoc
+++ b/wallets/Circle.asciidoc
@@ -2,6 +2,8 @@ Circle is a digital money company focused on making money “instant, secure, an
 
 Accounts may be accessed on Circle’s website and iPhone or Android app. Both apps including the buying/selling features and basic sending and receiving of payments.
 
+Circle allows its customers to hold funds denominated in bitcoin or USD. Funds held as dollars are still be spent and received through the Bitcoin network.  
+
 ## Security
 
 As a web/hot wallet, Circle should not be used to store large amounts of bitcoin. With full control over all accounts and private keys, your funds may be frozen at any time.
